// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array should fail to parse arrays with invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "path": "1",
  },
]
`;

exports[`array should fail to parse non-arrays 1`] = `
[
  {
    "code": "invalid_type",
    "path": "",
  },
]
`;

exports[`array the path property works within an object 1`] = `
[
  {
    "code": "invalid_type",
    "path": "a[0]",
  },
]
`;
